# libfreenect2

./: meson.build
examples/: meson.build
include/libfreenect2/: meson.build
tools/: meson.build
